plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.5' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
    id 'org.flywaydb.flyway' version '10.21.0' apply false
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    java {
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        // Web
        implementation 'org.springframework.boot:spring-boot-starter-web'

        // Validation
        implementation 'org.springframework.boot:spring-boot-starter-validation'

        // JPA
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

        // Flyway
        implementation 'org.springframework.boot:spring-boot-starter-flyway'
        implementation 'org.flywaydb:flyway-core'
        implementation 'org.flywaydb:flyway-mysql'

        // MySQL
        runtimeOnly 'com.mysql:mysql-connector-j'

        // Lombok
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'

        // Test
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testImplementation 'org.testcontainers:junit-jupiter:1.19.7'
        testImplementation 'org.testcontainers:mysql:1.19.7'
        testImplementation 'com.tngtech.archunit:archunit-junit5:1.2.0'
    }

    test {
        useJUnitPlatform()
    }
}
